Fix visibility

--- a/resources/sass/calendar/layout.scss
+++ b/resources/sass/calendar/layout.scss
@@ -119,8 +119,6 @@ body {
 }
 
 .page-calendars-edit {
-    display: flex;
-
     .navbar {
         &-expand.sticky-top {
             z-index: 10;
